--- a/About.html
+++ b/About.html
@@ -5,16 +5,18 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>Web Development Project</title>
+        <!-- provides background color to the page and the heading of the website-->
         <style>
             h1{
-                background-color: cyan;
+                background-color: yellow;
             }
             p{
                 font-size: 25;
             }
             body{
-                background-color: lightblue;
+                background-color: lightyellow;
             }
+          
         </style>
 
     </head>
@@ -30,6 +32,7 @@
             My hobbies include running, video games, and anime. I will admit I haven’t been nearly as active as I would like to be in the past few years. I play Overwatch 2 on a regular basis. I am also finishing the dead space remake at the moment.
         </p>
         <br>
+        <img src="IMG_1870.jpg" width="300" height="500">
         <br>
         <a href='home.html' >Home page</a>
         <br>
